fix: QR Code spacing

--- a/src/iron_verdict/static/css/layout.css
+++ b/src/iron_verdict/static/css/layout.css
@@ -94,7 +94,7 @@
     font-size: 18px;
     letter-spacing: 3px;
     text-align: center;
-    margin: 16px 0 24px;
+    margin: 16px 0 0;
     color: var(--text-dim);
 }
 
